--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -168,8 +168,8 @@
 .product_container .box .detail div {
   display: flex;
   justify-content: space-between;
-  margin-top: 4px;
-  margin-inline: 3px;
+  margin-top: 2px;
+  margin-inline: 6px;
 }
 
 .product_container .box .detail button {
@@ -288,7 +288,7 @@
 .invoce-card .box {
   padding: 10px 10px;
   width: 270px;
-  height: 280px;
+  height: 370px;
   overflow: hidden;
   border: 3px solid #e3dfdf;
   margin-left: 15px;
@@ -352,4 +352,17 @@
   object-fit: cover;
   height: 120px;
   width: 100px;
+}
+.notification-card {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.notification-card .box {
+  padding: 15px 15px;
+
+  border: 3px solid #e3dfdf;
+  margin-left: 15px;
+  margin-top: 20px;
 }
