--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -166,7 +166,7 @@
   font-size: 16px;
 }
 .product_container .box .detail div {
-  display: flex;
+  text-align: center;
   justify-content: space-between;
   margin-top: 2px;
   margin-inline: 6px;
